# godot-nkido-addon

./: .gitignore  CLAUDE.md  CMakeLists.txt  default_bus_layout.tres  icon.svg.import  project.godot
.github/workflows/: build.yml  release.yml
addons/nkido/: nkido.gdextension  nkido.gdextension.uid  nkido_bottom_panel.gd  nkido_bottom_panel.gd.uid  nkido_inspector.gd  nkido_inspector.gd.uid  nkido_plugin.gd  nkido_plugin.gd.uid  nkido_sample_pack.gd  nkido_sample_pack.gd.uid  plugin.cfg
addons/nkido/src/: nkido_akkado_source.cpp  nkido_akkado_source.h  nkido_akkado_source_format_loader.cpp  nkido_akkado_source_format_loader.h  nkido_akkado_source_format_saver.cpp  nkido_akkado_source_format_saver.h  nkido_audio_stream.cpp  nkido_audio_stream.h  nkido_audio_stream_playback.cpp  nkido_audio_stream_playback.h  nkido_engine.cpp  nkido_engine.h  nkido_player.cpp  nkido_player.h  register_types.cpp  register_types.h
docs/: Godot C++ Extension CI_CD Guide.md  prd-akkado-source-resource.md  prd-audio-stream-refactor.md  prd-godot-extension.md  prd-nkido-v2.md  prd-repo-restructure.md
example/: Interactive.gd  Interactive.gd.uid  Interactive.tscn  Main.gd  Main.gd.uid  Main.tscn  SampleDemo.gd  SampleDemo.gd.uid  SampleDemo.tscn  drum_pack.tres  drums_and_piano.akk  drums_and_piano.akk.uid
example/samples/808/: clap.wav.import  cowbell.wav.import  cymbal.wav.import  hhclosed.wav.import  hhopen.wav.import  kick01rr1.wav.import  rimshot.wav.import  snare01.wav.import  snare02.wav.import  tomhi.wav.import  tomlo.wav.import
